--- a/Lamazon/Lamazon.Services/Lamazon.Services.csproj
+++ b/Lamazon/Lamazon.Services/Lamazon.Services.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.20" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Lamazon.DataAccess\Lamazon.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
