--- a/anketa/NotesApp/Avenga.NotesApp/Avenga.NotesApp/appsettings.json
+++ b/anketa/NotesApp/Avenga.NotesApp/Avenga.NotesApp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "ConnectionString": "Server=DANILO\\SQLEXPRESS;Database=NotesAppNew;Trusted_Connection=True;TrustServerCertificate=True;",
+    "ConnectionString": "Server=.;Database=NotesAppOfficeNew;Trusted_Connection=True;TrustServerCertificate=True;",
     "BackUpConnectionString": "Server=DANILO\\SQLEXPRESS01;Database=NotesAppNew;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
