--- a/anketa/Prasalnik.Anketa.Skopje/Prasalnik.DataAccess/Prasalnik.DataAccess.csproj
+++ b/anketa/Prasalnik.Anketa.Skopje/Prasalnik.DataAccess/Prasalnik.DataAccess.csproj
@@ -8,7 +8,15 @@
 
   <ItemGroup>
     <Folder Include="Implementations\" />
-    <Folder Include="DataContext\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
