--- a/anketa/Prasalnik.Anketa.Skopje/Prasalnik.Anketa/Prasalnik.Anketa.csproj
+++ b/anketa/Prasalnik.Anketa.Skopje/Prasalnik.Anketa/Prasalnik.Anketa.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Prasalnik.DataAccess\Prasalnik.DataAccess.csproj" />
+    <ProjectReference Include="..\Prasalnik.Services\Prasalnik.Services.csproj" />
+  </ItemGroup>
+
 </Project>
