--- a/anketa/Prasalnik.Anketa.Skopje/Prasalnik.Services/Prasalnik.Services.csproj
+++ b/anketa/Prasalnik.Anketa.Skopje/Prasalnik.Services/Prasalnik.Services.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Prasalnik.DataAccess\Prasalnik.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
