--- a/anketa/Prasalnik.Anketa.Skopje/Prasalnik.Anketa/Prasalnik.Anketa.csproj
+++ b/anketa/Prasalnik.Anketa.Skopje/Prasalnik.Anketa/Prasalnik.Anketa.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Prasalnik.DataAccess\Prasalnik.DataAccess.csproj" />
     <ProjectReference Include="..\Prasalnik.Services\Prasalnik.Services.csproj" />
   </ItemGroup>
