--- a/Lamazon - office/Lamazon.Services/Lamazon.Services.csproj
+++ b/Lamazon - office/Lamazon.Services/Lamazon.Services.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.20" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.9" />
   </ItemGroup>
 
   <ItemGroup>
