--- a/Lamazon - office/Lamazon.Web/appsettings.json
+++ b/Lamazon - office/Lamazon.Web/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-  //"ConnectionStrings": {
-  //  "DefaultConnection": "Server=.;Database=LamazonDb;Trusted_Connection=True;TrustServerCertificate=True"
-  //}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=LamazonDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
