--- a/prasalnik/Questionnaire.Skopje/Questionnaire.Services/Questionnaire.Services.csproj
+++ b/prasalnik/Questionnaire.Skopje/Questionnaire.Services/Questionnaire.Services.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Questionnaire.DataAccess\Questionnaire.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
