--- a/anketa/Anketa/Anketa.Mappers/Anketa.Mappers.csproj
+++ b/anketa/Anketa/Anketa.Mappers/Anketa.Mappers.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Anketa.Domain\Anketa.Domain.csproj" />
+    <ProjectReference Include="..\Anketa.ViewModels\Anketa.ViewModels.csproj" />
+  </ItemGroup>
+
 </Project>
