--- a/prasalnik/GlasAnketaForma/GlasAnketa.Services/GlasAnketa.Services.csproj
+++ b/prasalnik/GlasAnketaForma/GlasAnketa.Services/GlasAnketa.Services.csproj
@@ -7,17 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AutoMappers\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Implementations\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GlasAnketa.DataAccess\GlasAnketa.DataAccess.csproj" />
+    <ProjectReference Include="..\GlasAnketa.ViewModels\GlasAnketa.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
