--- a/prasalnik/GlasAnketaForma/GlasAnketa.ViewModels/GlasAnketa.ViewModels.csproj
+++ b/prasalnik/GlasAnketaForma/GlasAnketa.ViewModels/GlasAnketa.ViewModels.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GlasAnketa.Domain\GlasAnketa.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
