--- a/prasalnik - AIdps/GlasAnketaForma/GlasAnketa/appsettings.json
+++ b/prasalnik - AIdps/GlasAnketaForma/GlasAnketa/appsettings.json
@@ -5,11 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "name": "employee-satisfaction-survey",
-  "version": "1.0.0",
-  "dependencies": {
-    "chart.js": "^4.0.0",
-    "confetti-js": "^0.0.18"
-  }
+  "AllowedHosts": "*"
 }
