--- a/prasalnik - gpt/GlasAnketaForma/GlasAnketa/appsettings.json
+++ b/prasalnik - gpt/GlasAnketaForma/GlasAnketa/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "AllowedHosts": "*",
-  "ConnectionString": {
+  "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=VoiceEmployeeDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
+}
