--- a/prasalnik - gpt/GlasAnketaForma/GlasAnketa.DataAccess/GlasAnketa.DataAccess.csproj
+++ b/prasalnik - gpt/GlasAnketaForma/GlasAnketa.DataAccess/GlasAnketa.DataAccess.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GlasAnketa.Domain\GlasAnketa.Domain.csproj" />
+    <ProjectReference Include="..\GlasAnketa.ViewModels\GlasAnketa.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
