--- a/Lamazon/Lamazon.DataAccess/Lamazon.DataAccess.csproj
+++ b/Lamazon/Lamazon.DataAccess/Lamazon.DataAccess.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Lamazon.Entities\Lamazon.Entities.csproj" />
+    <ProjectReference Include="..\Lamazon.Entities\Lamazon.Domain.csproj" />
   </ItemGroup>
 
 </Project>
